test/sematest/invalid/identifier_system_in_scope3.java
class A {
  public static void main(String[] System) {
    System.out.println(3);
  }
}